<resources>
    <string name="app_name">Lab Room Manage</string>
    <string name="todolist">ROOM LIST</string>
    <string name="computer_label">COMPUTER</string>
    <string name="room_label">ROOM</string>
    <string name="device_label">DEVICE</string>
    <string name="type_device_label">TYPE DEVICE</string>
    <string name="tags_label">TAGS</string>
    <string name="add_room">Add</string>
    <string name="notify">Notify</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="feeds">Feeds</string>
    <string name="title">Title</string>
    <string name="describe">Describe</string>
    <string name="floor">Floor</string>
    <string name="messenger">Messenger</string>
    <string name="today_task">TODAY TASK</string>
    <string name="room_task">ROOM TASK</string>
    <string name="content_task">Content</string>
    <string name="view_item_room">VIEW ➞</string>
    <string name="detail">Detail</string>
    <string name="login">LOGIN</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="go">GO !</string>
    <string name="not_account">Not account yet? Create one</string>
    <string name="forgot">Forgot ?</string>
    <string name="logoutUser">Log out</string>
    <string name="loginUser">Login</string>
    <string name="edit_information">Edit Information</string>
    <string name="today">Today</string>
    <string name="work_empty">Your work empty</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_work">Enter your work</string>
    <string name="time">Time: </string>
    <string name="timeAM">
        AM</string>
    <string name="timePM">PM</string>
    <string name="enterhours">Hours</string>
    <string name="sumwork">Total work: </string>
    <string name="whoisthis">Who is this ?</string>
    <string-array name="title_devices">
        <item>ID</item>
        <item>Name</item>
        <item>Desc</item>
        <item>Type Device</item>
        <item></item>
    </string-array>
    <string name="require_data">Please enter full data in the box</string>
    <string name="warning_data">Invalid data ! Please re-enter</string>
    <string name="devicenametitle">Device Name</string>
    <string name="devicedesctitle">Description</string>
    <string name="profile">Profile</string>
    <string name="informations_personnelles">Informations personnelles</string>
    <string name="fullname_user">Full name</string>
    <string name="email_user">Email</string>
    <string name="update">Update</string>
    <string name="admin">ADMIN</string>
    <string name="technicians">TECHNICIANS</string>
    <string name="member">MEMBER</string>
    <string name="title_room">Room Title</string>
    <string name="short_description">Short Description</string>
    <string name="create">Create</string>
    <string name="broken">Broken</string>
    <string name="repair">Repair</string>
    <string name="active">Active</string>
    <string name="edit_device_title">EDIT DEVICE</string>
    <string name="edit_device_name">Name: </string>
    <string name="edit_device_desc">Desc: </string>
    <string name="edit_device_status">Status: </string>
    <string name="edit_device_computer">Computer: </string>
    <string name="edit_device_type">Type: </string>
    <string name="list_device_btn_edit">Edit</string>
    <string name="list_device_btn_del">Delete</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="user_manager">User Manager</string>
    <string name="add_material_facilities">MATERIAL FACILITIES</string>
    <string name="all_user">All Users</string>
    <string name="total_user">Total users</string>
    <string name="edit">EDIT</string>
    <string name="del">DELETE</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="add">Add</string>
    <string name="role">Role</string>
    <string name="register">Register</string>
    <string name="register_title">REGISTER</string>
    <string name="cpu">CPU:</string>
    <string name="hdd">HDD:</string>
    <string name="ram">RAM:</string>
    <string name="status">Status</string>
    <string name="room">Room</string>
    <string name="logic_faild">Please enter full information</string>
    <string name="computer_title">Computer</string>
    <string name="type_device">Type Device</string>
    <string name="device">Device</string>
    <string name="device_title">Device Title</string>
    <string name="tag">Tags</string>
    <string name="tag_title">Tags Title</string>
    <string name="room_title">Room Title</string>
    <string name="computer_hint">Computer Title</string>
    <string name="type_device_title">Type Device Title</string>

</resources>
