<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_weight="4"
        android:background="@color/bgToolbarComputer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:ignore="MissingConstraints">
        
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar.editUser"
            app:titleTextColor="@color/colorWhile"
            app:title="@string/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <ImageView
            android:src="@drawable/iv_icon_user"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_gravity="center"
            android:layout_width="@dimen/layout_size_100"
            android:layout_height="@dimen/layout_size_100" />
        
        <TextView
            android:id="@+id/tv.fullname"
            android:textSize="@dimen/fab_margin_16"
            android:textColor="@color/colorWhile"
            android:layout_marginTop="@dimen/left_rc_10"
            android:gravity="center"
            android:text="@string/username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>
    
    <RelativeLayout
        android:padding="@dimen/margin_20"
        android:orientation="vertical"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear.form"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/bgToolbarComputer"
                android:text="@string/informations_personnelles"
                android:textSize="@dimen/margin_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginTop="@dimen/left_rc_10"
                android:textSize="15sp"
                android:textColor="@color/colorWhile"
                android:textColorHint="@color/colorWhile"
                android:padding="13dp"
                android:hint="@string/fullname_user"
                android:background="@drawable/custom_edittext_edit"
                android:id="@+id/et.nameEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginTop="@dimen/left_rc_10"
                android:textSize="15sp"
                android:textColor="@color/colorWhile"
                android:textColorHint="@color/colorWhile"
                android:padding="13dp"
                android:hint="@string/email_user"
                android:background="@drawable/custom_edittext_edit"
                android:id="@+id/et.emailEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_marginTop="@dimen/left_rc_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="@dimen/margin_5"
                    android:visibility="visible"
                    android:id="@+id/tv.changePassword"
                    android:textColor="@color/bgToolbarComputer"
                    android:text="@string/change_password"
                    android:textSize="@dimen/margin_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:visibility="invisible"
                    android:orientation="vertical"
                    android:id="@+id/linear.changePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:clickable="true"
                        android:textSize="15sp"
                        android:textColor="@color/colorWhile"
                        android:textColorHint="@color/colorWhile"
                        android:padding="13dp"
                        android:hint="@string/password_login"
                        android:background="@drawable/custom_edittext_edit"
                        android:id="@+id/et.oldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_marginTop="@dimen/left_rc_10"
                        android:textSize="15sp"
                        android:textColor="@color/colorWhile"
                        android:textColorHint="@color/colorWhile"
                        android:padding="13dp"
                        android:hint="@string/new_password"
                        android:background="@drawable/custom_edittext_edit"
                        android:id="@+id/et.newPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_marginTop="@dimen/left_rc_10"
                        android:textSize="15sp"
                        android:textColor="@color/colorWhile"
                        android:textColorHint="@color/colorWhile"
                        android:padding="13dp"
                        android:hint="@string/confirm_new_password"
                        android:background="@drawable/custom_edittext_edit"
                        android:id="@+id/et.cfNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn.edit"
            android:textColor="@color/colorWhile"
            android:text="@string/update"
            android:background="@drawable/custom_hover_btn_edit"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>