<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/left_rc_10"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="@dimen/margin_20"
        android:background="@drawable/custom_border_bg_create_room"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear.title"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/iv_title"
                android:id="@+id/iv.logoTitle"
                android:layout_width="@dimen/size_img_40"
                android:layout_height="@dimen/size_img_40" />

            <EditText
                android:textColor="@color/colorWhile"
                android:textColorHint="@color/colorWhile"
                android:textSize="12sp"
                android:padding="@dimen/left_rc_10"
                android:layout_marginLeft="@dimen/left_rc_10"
                android:hint="@string/title_room"
                android:id="@+id/et.titleCreate"
                android:background="@drawable/custom_edittext_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_img_40" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_20"
            android:layout_below="@id/linear.title"
            android:id="@+id/linear.desc"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/iv_desc"
                android:id="@+id/iv.logoDesc"
                android:layout_width="@dimen/size_img_40"
                android:layout_height="@dimen/size_img_40" />

            <EditText
                android:textColor="@color/colorWhile"
                android:textColorHint="@color/colorWhile"
                android:textSize="12sp"
                android:padding="@dimen/left_rc_10"
                android:layout_marginLeft="@dimen/left_rc_10"
                android:hint="@string/short_description"
                android:id="@+id/et.descCreate"
                android:background="@drawable/custom_edittext_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_img_40" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/left_rc_10"
            android:textStyle="bold"
            android:textColor="@color/bgToolbarComputer"
            android:textSize="13sp"
            android:text="Status"
            android:layout_below="@id/linear.desc"
            android:id="@+id/tv.status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_marginLeft="@dimen/left_rc_10"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_below="@id/tv.status"
            android:id="@+id/rg.status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:textColor="@color/bgToolbarComputer"
                android:checked="true"
                android:padding="@dimen/margin_5"
                android:button="@drawable/custom_cb_rmb"
                android:textSize="12sp"
                android:text="@string/active"
                android:id="@+id/rb.active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/bgToolbarComputer"
                android:padding="@dimen/margin_5"
                android:button="@drawable/custom_cb_rmb"
                android:textSize="12sp"
                android:text="@string/repair"
                android:id="@+id/rb.repair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:textColor="@color/bgToolbarComputer"
                android:padding="@dimen/margin_5"
                android:button="@drawable/custom_cb_rmb"
                android:textSize="12sp"
                android:text="@string/broken"
                android:id="@+id/rb.broken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <View
            android:id="@+id/view"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_below="@id/rg.status"
            android:background="@color/colorWhile"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>



        <Button
            android:layout_marginTop="@dimen/left_rc_10"
            android:layout_below="@id/view"
            android:layout_alignParentRight="true"
            android:id="@+id/btn.add"
            android:textSize="@dimen/left_rc_10"
            android:textColor="@color/colorWhile"
            android:text="@string/add_room"
            android:background="@drawable/custom_hover_btn_edit"
            android:layout_width="70dp"
            android:layout_height="@dimen/size_img_40" />

    </RelativeLayout>



</RelativeLayout>