<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:id="@+id/v.point"
        android:layout_width="68dp"
        android:layout_height="match_parent">

        <View
            android:layout_gravity="center"
            android:background="@color/colorWhile"
            android:layout_width="@dimen/layout_size_3"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_gravity="center"
            android:background="@drawable/custom_point"
            android:id="@+id/tv.point"
            android:layout_width="@dimen/margin_15"
            android:layout_height="@dimen/margin_15"/>


        <View
            android:layout_gravity="center"
            android:background="@color/colorWhile"
            android:layout_width="@dimen/layout_size_3"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <RelativeLayout
        android:padding="@dimen/margin_5"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginLeft="@dimen/left_rc_10"
        android:background="@color/colorWhile"
        android:layout_toRightOf="@id/v.point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginTop="@dimen/left_rc_10"
            android:src="@drawable/logo_room"
            android:id="@+id/iv.logoRoom"
            android:layout_width="@dimen/layout_size_50"
            android:layout_height="@dimen/layout_size_50" />

        <RelativeLayout
            android:padding="@dimen/left_rc_10"
            android:layout_toRightOf="@id/iv.logoRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/text_color_black"
                android:textStyle="bold"
                android:textSize="@dimen/item_room_title_25"
                android:id="@+id/tv.titleItemRoom"
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_below="@id/tv.titleItemRoom"
                android:id="@+id/tv.floorItemRoom"
                android:text="@string/floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/text_color_black"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tv.floorItemRoom"
                android:id="@+id/tv.describeItemRoom"
                android:textSize="@dimen/text_title_18"
                android:text="@string/describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv.horizontal"
                android:background="@color/text_color"
                android:layout_marginTop="@dimen/left_rc_10"
                android:layout_below="@id/tv.describeItemRoom"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/left_rc_10"
                android:layout_below="@id/tv.horizontal"
                android:text="@string/view_item_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
